# bogor-house-price

./: .editorconfig  .gitignore  DATA_LINEAGE.md  Makefile  README.md  conda-env.yml  docker-compose-no-dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: .dockerignore  .env.example  Dasbor.py  Dockerfile  app.py  app_ddl.sql  conda-env.yml  requirements.txt
app_docs/: .gitignore  Dockerfile  nginx.conf
appv2/: .env.example  .gitignore  Dockerfile  app.py  app_ddl.sql  requirements.txt
docker/: db.env.example  init.sql  mariadb.env  nginx.conf  reverse_proxy.py  streamlit-secrets.toml.example  web.env
loader/: download_overpass.py  process_geojson.py
ml/: create_embeddings.py  ml_base.py  ml_llm.py  ml_plot.py  train_baseline.py  train_catboost.py  train_random_forest.py  tune_catboost.py  tune_random_forest.py
modelling/: L0_1_overpass.py  L1_1_house.py  L1_1_overpass.py  L2_1_feature_construction.py  L2_2_outlier_removal.py  L3_1_correlations.py  L3_2_selection.py  L3_3_selection.py  etl_base.py  etl_constants.py  etl_normalizer.py  preprocess_sklearn.ipynb  preprocess_tf.ipynb  preprocessing.py  train_baseline.py  train_catboost.py  train_random_forest.py  train_tensorflow.py  tune_random_forest.py
nginx/: nginx.conf  proxy.conf
notebooks/: eda-benford.ipynb  eda_baseline.ipynb  eda_corr.ipynb  eda_duckdb.ipynb  eda_house_dwh.ipynb  eda_houses.ipynb  eda_pandas.ipynb  eda_spatial.ipynb  eda_train.ipynb  etl_L1_house.ipynb  llm-chat.ipynb  mobilenet.ipynb  plot_catboost.ipynb  plot_corr.ipynb  plot_embeddings.ipynb  rag_deepset.ipynb  (+9 more)
(+215 files in other folders)
