[project]
name = "project-rumah-regresi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Data Engineering
    "dbt-core>=1.9.3",
    "dbt-duckdb>=1.9.2",
    "duckdb>=1.2.1",
    # Web Scraping
    "scrapy>=2.12.0",
    # Web & Database
    "psycopg[binary]>=3.2.6",
    "pgvector>=0.3.6",
    "streamlit>=1.43.2",
    "google-genai>=1.5.0",
    # Math, Statistics, & Machine Learning
    "pandas>=2.2.3",
    "geopandas>=1.0.1",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "lightgbm>=4.6.0",
    "catboost>=1.2.7",
    "xgboost>=3.0.0",
    "ydf>=0.11.0",
    # Nomic Embedding
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "einops>=0.8.1",
    # Geospatial
    "osmnx>=2.0.1",
    "networkx>=3.4.2",
    "cartopy>=0.24.1",
    # Notebooks & Visualization
    "ipykernel>=6.29.5",
    "plotly>=6.0.0",
    "seaborn>=0.13.2",
    "ruff>=0.10.0",
    "tqdm>=4.67.1",
    "optuna>=4.2.1",
    "mlflow>=2.21.0",
    "python-magic>=0.4.27",
]
